[workspace]
resolver = "2"
members = [
    "lib",
    "derive",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["duan zhou <duan_zhou@outlook.com>"]
license = "MIT"
description = "# A library to generate toml text with clear options and comments"
keywords = ["toml", "config", "document"]
categories = [ "parser-implementations", "parsing", "config", "toml" ]
