[package]
name = "toml-input-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "parsing" ] }
darling = "0.20"
regex = "1"
convert_case = "0.8"

[dev-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
toml-input = {version = "0.1", path = "../lib"}
strum = "0.27"
strum_macros = "0.27"