[package]
name = "toml-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
toml-input-derive = { version = "*", path = "../derive" }
bytes = "*"

[dev-dependencies]
serde_repr = "0.1"
strum = "*"
strum_macros = "*"
