[package]
name = "toml-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
toml-input-derive = { version = "0.2", path = "../derive" }
bytes = "1"
thiserror = "2.0.12"

[dev-dependencies]
strum = "0.27"
strum_macros = "0.27"
